--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -14,8 +14,8 @@
     "url": "https://github.com/AlaskaAirlines/auro-dropdown"
   },
   "type": "module",
-  "main": "index.js",
-  "module": "index.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "types": "tsc --project tsconfig.json",
   "license": "Apache-2.0",
   "dependencies": {
