--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -20,6 +20,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@aurodesignsystem/auro-icon": "^5.0.0",
+    "@floating-ui/dom": "^1.6.11",
     "@popperjs/core": "^2.11.8",
     "chalk": "^5.2.0",
     "lit": "^3.2.1"
