--- a/components/input/package.json
+++ b/components/input/package.json
@@ -71,7 +71,7 @@
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "bundler": "rollup -c node:@auro-formkit/config/rollup --input src/index.js",
     "clean": "rm -rf dist build",
-    "dev": "web-dev-server --open demo/ --node-resolve --watch",
+    "dev": "web-dev-server --open demo/ --node-resolve --watch --port 8002",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
