build: remove unnecessary build scripts

--- a/package.json
+++ b/package.json
@@ -163,10 +163,10 @@
     "dev:form": "concurrently --kill-others \"npm run build:watch:form\" \"npm run serve:form\"",
     "dev:input": "concurrently --kill-others \"npm run build:watch:input\" \"npm run serve:input\"",
     "dev:dropdown": "concurrently --kill-others \"npm run build:watch:dropdown\" \"npm run serve:dropdown\"",
-    "build:demo": "npm-run-all build demo:rm:build demo:new:build demo:copy:index:input demo:copy:demo:input demo:update:index",
-    "build:demo:form": "npm-run-all build:form demo:rm:build demo:new:build demo:copy:index:form demo:copy:demo:form demo:update:index",
-    "build:demo:input": "npm-run-all build:input demo:rm:build demo:new:build demo:copy:index:input demo:copy:demo:input demo:update:index",
-    "build:demo:dropdown": "npm-run-all build:dropdown demo:rm:build demo:new:build demo:copy:index:dropdown demo:copy:demo:dropdown demo:update:index",
+    "build:demo": "npm-run-all build demo:rm:build demo:new:build demo:copy:index:input demo:copy:demo:input",
+    "build:demo:form": "npm-run-all build:form demo:rm:build demo:new:build demo:copy:index:form demo:copy:demo:form",
+    "build:demo:input": "npm-run-all build:input demo:rm:build demo:new:build demo:copy:index:input demo:copy:demo:input",
+    "build:demo:dropdown": "npm-run-all build:dropdown demo:rm:build demo:new:build demo:copy:index:dropdown demo:copy:demo:dropdown",
     "demo:copy:demo:form": "copyfiles -u 1 -V \"./components/form/src/demo/**/*\" ./build/demo",
     "demo:copy:demo:input": "copyfiles -u 1 -V \"./components/input/src/demo/**/*\" ./build/demo",
     "demo:copy:demo:dropdown": "copyfiles -u 1 -V \"./components/dropdown/src/demo/**/*\" ./build/demo",
@@ -175,7 +175,6 @@
     "demo:copy:index:dropdown": "copyfiles -u 1 -V \"./components/dropdown/src/demo/index.html\" ./build",
     "demo:new:build": "mkdir -p ./build/css ./build/demo",
     "demo:rm:build": "rm -rf ./build",
-    "demo:update:index": "node ./scripts/prepForBuild",
     "build:dev:assets": "npm-run-all build:sass:input build:sass:dropdown postCss:input postCss:dropdown sass:render",
     "build:dev:assets:form": "npm-run-all build:sass:form postCss:form sass:render:form",
     "build:dev:assets:input": "npm-run-all build:sass:input postCss:input sass:render:input",
