--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -4,13 +4,11 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "src/index.ts",
+  "main": "./src/index.js",
   "types": "tsc",
   "exports": {
     ".": "./src/index.js",
-    "./formVersionWriter": "./src/formVersionWriter.mjs"
-  },
-  "scripts": {
-    "clean": "rm -rf .turbo && rm -rf node_modules"
+    "./formVersionWriter": "./src/formVersionWriter.mjs",
+    "./devPorts": "./src/devPorts.mjs"
   }
 }
