ci: change on `@semantic-release/git` plugin and test command

--- a/components/menu/package.json
+++ b/components/menu/package.json
@@ -124,7 +124,7 @@
             "./README.md",
             "./docs/api.md",
             "./demo/demo.md",
-            "./demo/apiExamples.md"
+            "./demo/api.md"
           ]
         }
       ],
