fix: revert automatic port script

--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -8,7 +8,6 @@
   "types": "tsc",
   "exports": {
     ".": "./src/index.js",
-    "./formVersionWriter": "./src/formVersionWriter.mjs",
-    "./devPorts": "./src/devPorts.mjs"
+    "./formVersionWriter": "./src/formVersionWriter.mjs"
   }
 }
