chore: fix type warnings in build process

--- a/turbo.json
+++ b/turbo.json
@@ -36,7 +36,7 @@
       "outputs": ["dist/**"]
     },
     "types": {
-      "outputs": ["tsc/**"]
+      "outputs": ["dist/**"]
     },
     "build:watch": {
       "dependsOn": ["^build"],
