chore: fix turbo.json build warning

--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,7 @@
       ]
     },
     "build:version": {
-      "outputs": ["src/version.js"]
+      "outputs": ["src/"]
     },
     "build:sass": {
       "outputs": ["src/**/*.css"],
