chore: fix turbo.json build warning

--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,7 @@
       ]
     },
     "build:version": {
-      "outputs": ["src/"]
+      "outputs": ["src/*.js", "src/**/*.js"]
     },
     "build:sass": {
       "outputs": ["src/**/*.css"],
