--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -6,18 +6,17 @@
     "  2. Go to http://localhost:8000",
     "================================================================================"
   ],
-  "name": "@aurodesignsystem/auro-datepicker",
+  "name": "@aurodesignsystem/auro-formkit.datepicker",
   "version": "3.2.0",
   "description": "auro-datepicker HTML custom element",
+  "type": "module",
+  "main": "src/index.js",
+  "module": "src/index.js",
+  "types": "tsc --project tsconfig.json",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/AlaskaAirlines/auro-datepicker"
-  },
-  "type": "module",
-  "main": "index.js",
-  "license": "Apache-2.0",
-  "engines": {
-    "node": "^18 || ^20"
   },
   "dependencies": {
     "@alaskaairux/icons": "^4.44.1",
@@ -42,41 +41,16 @@
     "@aurodesignsystem/design-tokens": "^4.10.1",
     "@aurodesignsystem/eslint-config": "^1.3.2",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@open-wc/testing": "^4.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^12.0.1",
-    "@web/dev-server": "^0.4.6",
-    "@web/test-runner": "^0.19.0",
-    "autoprefixer": "^10.4.20",
     "compression": "^1.7.4",
     "concat": "^1.0.3",
     "concurrently": "^9.0.1",
     "copyfiles": "^2.4.1",
     "core-js": "^3.38.1",
-    "eslint": "^9.13.0",
-    "eslint-plugin-jsdoc": "^50.4.3",
-    "husky": "^9.1.6",
     "markdown-magic": "^2.6.1",
-    "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.47",
-    "postcss-discard-comments": "^7.0.3",
-    "postcss-selector-replace": "^1.0.2",
     "rollup": "^4.24.3",
     "rollup-plugin-serve": "^3.0.0",
-    "sass": "^1.80.5",
-    "semantic-release": "^24.2.0",
-    "stylelint": "^16.10.0",
-    "stylelint-config-idiomatic-order": "^10.0.0",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.8.1",
-    "typescript": "^5.6.3",
     "wc-sass-render": "^1.4.0",
     "web-component-analyzer": "^2.0.0",
     "whatwg-fetch": "^3.6.20",
@@ -87,98 +61,31 @@
       "sass": "$sass"
     }
   },
-  "browserslist": [
-    "last 2 Chrome versions",
-    "last 2 iOS major versions",
-    "last 2 Firefox versions",
-    "last 2 Edge versions",
-    "last 2 Safari major versions"
-  ],
   "nodemonConfig": {
     "ignore": [
       "*-css.js",
       "*.css"
     ]
   },
-  "release": {
-    "branches": [
-      {
-        "name": "main"
-      },
-      {
-        "name": "beta",
-        "prerelease": true
-      }
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      [
-        "@semantic-release/changelog",
-        {
-          "changelogFile": "./CHANGELOG.md",
-          "changelogTitle": "# Semantic Release Automated Changelog"
-        }
-      ],
-      "@semantic-release/npm",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "./package.json",
-            "./CHANGELOG.md",
-            "./README.md",
-            "./docs/api.md",
-            "./demo/demo.md",
-            "./demo/api.md",
-            "./demo/api.min.js",
-            "./demo/index.min.js"
-          ]
-        }
-      ],
-      "@semantic-release/github"
-    ]
-  },
   "publishConfig": {
     "access": "public"
   },
-  "keywords": [
-    "alaska airlines",
-    "auro",
-    "design system",
-    "web components"
-  ],
   "scripts": {
-    "build": "npm-run-all build:sass build:version postversion types bundler",
-    "build:test": "npm-run-all test linters",
-    "build:release": "npm-run-all linters build postinstall test",
-    "build:ci": "npm-run-all sweep build:release",
-    "build:api": "wca analyze 'src/auro-datepicker.js' --outFiles docs/api.md",
-    "build:demo": "npm-run-all build demo:rm:build demo:new:build demo:copy:index demo:copy:demo demo:update:index",
-    "build:dev:assets": "npm-run-all build:sass:demo build:sass:component postCss:component sass:render postversion",
-    "build:docs": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
-    "build:sass": "npm-run-all build:sass:demo build:sass:component postCss:component sass:render",
-    "build:sass:demo": "sass --no-source-map demo:demo",
-    "build:sass:component": "for file in src/*.scss; do npx sass --no-source-map \"$file:${file%.scss}.css\"; done",
-    "build:version": "node scripts/version.mjs",
-    "build:watch": "nodemon -e scss,js,html --watch src --watch apiExamples --watch docs --exec npm run build:dev:assets",
-    "bundler": "rollup -c",
-    "bundler:test": "rollup -c -w",
-    "scssLint": "stylelint \"./src/**/*.scss\"",
-    "dev": "concurrently --kill-others 'npm run build:watch' 'npm run serve'",
-    "dist:js": "copyfiles -u 1 -V './src/**/*.js' ./dist",
-    "esLint": "./node_modules/.bin/eslint src/**/*.js --ignore-pattern 'src/**/*Version.js'",
-    "linters": "npm-run-all scssLint esLint",
-    "preCommit": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/pre-commit.mjs",
-    "postCss:component": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
-    "postinstall": "node packageScripts/postinstall.mjs",
-    "sass:render": "sass-render src/*.css -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
-    "serve": "web-dev-server --open demo/ --node-resolve --watch",
-    "sweep": "rm -rf ./demo/css ./dist | rm ./src/*.css ./src/*-css.js ./demo/*.min.js",
-    "test": "wtr --coverage",
+    "build": "run-s build:version build:sass bundler types",
+    "build:version": "node ./src/scripts/version.mjs",
+    "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
+    "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
+    "bundler": "rollup -c node:@auro-formkit/config/rollup --input src/index.js",
+    "clean": "rm -rf dist build",
+    "dev": "web-dev-server",
+    "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
+    "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
+    "serve": "web-dev-server",
+    "test": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --coverage",
     "test:watch": "wtr --watch",
-    "prepare": "husky install",
     "types": "tsc",
-    "postversion": "npm-run-all build:api build:docs"
+    "lint": "npm-run-all scssLint esLint",
+    "scssLint": "stylelint \"./src/**/*.scss\"",
+    "esLint": "eslint \"./src/**/*.js\""
   }
 }
