--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "lodash": "^4.17.21",
     "markdown-magic": "^2.6.1",
     "nodemon": "^3.1.7",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.49",
     "postcss-custom-properties": "^14.0.4",
     "postcss-discard-comments": "^7.0.3",
