--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^12.0.1",
+    "@types/chai": "^5.0.1",
+    "@types/mocha": "^10.0.10",
     "@web/dev-server": "^0.4.6",
     "@web/test-runner": "^0.19.0",
     "autoprefixer": "^10.4.20",
