fix: update package names to use monorepo namespace

--- a/components/combobox/package.json
+++ b/components/combobox/package.json
@@ -6,7 +6,7 @@
     "  2. Go to http://localhost:8000",
     "================================================================================"
   ],
-  "name": "@aurodesignsystem/auro-formkit.combobox",
+  "name": "@auro-formkit/auro-combobox",
   "version": "2.1.4",
   "description": "auro-combobox HTML custom element",
   "type": "module",
