--- a/components/checkbox/package.json
+++ b/components/checkbox/package.json
@@ -6,7 +6,7 @@
     "  2. Go to http://localhost:8000",
     "================================================================================"
   ],
-  "name": "@aurodesignsystem/auro-formkit.checkbox",
+  "name": "@auro-formkit/auro-checkbox",
   "version": "4.1.0",
   "description": "auro-checkbox HTML custom element",
   "type": "module",
