--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -6,7 +6,7 @@
     "  2. Go to http://localhost:8000",
     "================================================================================"
   ],
-  "name": "@auro-formkit/auro-formkit.dropdown",
+  "name": "@auro-formkit/auro-dropdown",
   "version": "3.0.0",
   "description": "auro-dropdown HTML custom element",
   "repository": {
