--- a/components/select/package.json
+++ b/components/select/package.json
@@ -6,7 +6,7 @@
     "  2. Go to http://localhost:8000",
     "================================================================================"
   ],
-  "name": "@aurodesignsystem/auro-formkit.select",
+  "name": "@auro-formkit/auro-select",
   "version": "3.3.0",
   "description": "auro-select HTML custom element",
   "type": "module",
