--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -10,9 +10,9 @@
   "version": "3.2.0",
   "description": "auro-datepicker HTML custom element",
   "type": "module",
-  "main": "src/index.js",
-  "module": "src/index.js",
-  "types": "tsc --project tsconfig.json",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -80,7 +80,7 @@
     "serve": "web-dev-server",
     "test": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --coverage",
     "test:watch": "wtr --watch",
-    "types": "tsc",
+    "types": "tsc --project tsconfig.json",
     "lint": "npm-run-all scssLint esLint",
     "scssLint": "stylelint \"./src/**/*.scss\"",
     "esLint": "eslint \"./src/**/*.js\""
