--- a/components/menu/package.json
+++ b/components/menu/package.json
@@ -59,7 +59,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-s build:sass bundler types",
+    "build": "run-s build:version build:sass bundler types",
+    "build:version": "node ./src/scripts/version.mjs",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "bundler": "rollup -c node:@auro-formkit/config/rollup --input src/index.js",
