--- a/components/combobox/package.json
+++ b/components/combobox/package.json
@@ -19,14 +19,14 @@
     "url": "https://github.com/AlaskaAirlines/auro-combobox"
   },
   "dependencies": {
-    "@alaskaairux/icons": "^4.44.1",
-    "@aurodesignsystem/auro-dropdown": "^3.1.3",
-    "@aurodesignsystem/auro-formvalidation": "^1.0.4",
-    "@aurodesignsystem/auro-input": "^4.1.1",
-    "@aurodesignsystem/auro-library": "^3.0.2",
-    "@aurodesignsystem/auro-menu": "^4.1.4",
-    "chalk": "^5.3.0",
-    "lit": "^3.2.1"
+  "@alaskaairux/icons": "^4.44.1",
+  "@auro-formkit/auro-dropdown": "*",
+  "@auro-formkit/auro-input": "*",
+  "@auro-formkit/auro-menu": "*",
+  "@aurodesignsystem/auro-formvalidation": "^1.0.4",
+  "@aurodesignsystem/auro-library": "^3.0.2",
+  "chalk": "^5.3.0",
+  "lit": "^3.2.1"
   },
   "peerDependencies": {
     "@aurodesignsystem/design-tokens": "^4.9.2",
