--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -35,16 +35,11 @@
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "compression": "^1.7.4",
-    "concat": "^1.0.3",
-    "concurrently": "^9.0.1",
     "copyfiles": "^2.4.1",
-    "core-js": "^3.38.1",
     "rollup": "^4.24.3",
     "rollup-plugin-serve": "^3.0.0",
     "wc-sass-render": "^1.4.0",
-    "web-component-analyzer": "^2.0.0",
-    "whatwg-fetch": "^3.6.20",
-    "yaml-lint": "^1.7.0"
+    "web-component-analyzer": "^2.0.0"
   },
   "overrides": {
     "wc-sass-render": {
