--- a/components/select/package.json
+++ b/components/select/package.json
@@ -31,16 +31,11 @@
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "compression": "^1.7.5",
-    "concat": "^1.0.3",
-    "concurrently": "^9.1.0",
-    "core-js": "^3.39.0",
     "rollup": "^4.26.0",
     "rollup-plugin-serve": "^1.1.1",
     "stylelint": "^16.10.0",
     "wc-sass-render": "^1.4.0",
-    "web-component-analyzer": "^2.0.0",
-    "whatwg-fetch": "^3.6.20",
-    "yaml-lint": "^1.7.0"
+    "web-component-analyzer": "^2.0.0"
   },
   "nodemonConfig": {
     "ignore": [
