--- a/package.json
+++ b/package.json
@@ -65,7 +65,10 @@
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "compression": "^1.7.5",
+    "concat": "^1.0.3",
+    "concurrently": "^9.0.1",
     "copyfiles": "^2.4.1",
+    "core-js": "^3.38.1",
     "eslint": "^9.14.0",
     "eslint-plugin-jsdoc": "^50.5.0",
     "husky": "^8.0.0",
@@ -86,7 +89,9 @@
     "stylelint-order": "^6.0.4",
     "stylelint-scss": "^6.9.0",
     "turbo": "^2.3.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "whatwg-fetch": "^3.6.20",
+    "yaml-lint": "^1.7.0"
   },
   "browserslist": [
     "last 2 Chrome versions",
