--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "@alaskaairux/icons": "^4.44.1",
-    "@aurodesignsystem/auro-dropdown": "^3.1.3",
     "@aurodesignsystem/auro-formvalidation": "^1.0.4",
-    "@aurodesignsystem/auro-input": "^4.0.0",
     "@aurodesignsystem/auro-library": "^3.0.2",
     "@aurodesignsystem/auro-popover": "^4.1.0",
+    "@auro-formkit/auro-dropdown": "*",
+    "@auro-formkit/auro-input": "*",
     "@material/mwc-icon-button": "^0.27.0",
     "@material/mwc-list": "^0.27.0",
     "@material/mwc-menu": "^0.27.0",
