--- a/components/select/package.json
+++ b/components/select/package.json
@@ -12,10 +12,10 @@
     "url": "https://github.com/AlaskaAirlines/auro-select"
   },
   "dependencies": {
-    "@aurodesignsystem/auro-dropdown": "^3.2.0",
     "@aurodesignsystem/auro-formvalidation": "^1.0.4",
     "@aurodesignsystem/auro-library": "^3.0.2",
     "@aurodesignsystem/auro-menu": "^4.1.5",
+    "@auro-formkit/auro-dropdown": "*",
     "chalk": "^5.3.0",
     "lit-element": "^4.1.1",
     "lit-html": "^3.2.1"
