--- a/components/radio/package.json
+++ b/components/radio/package.json
@@ -23,6 +23,9 @@
     "@aurodesignsystem/webcorestylesheets": "^5.1.2"
   },
   "devDependencies": {
+    "@auro-formkit/build-tools": "*",
+    "@auro-formkit/config": "*",
+    "@auro-formkit/typescript": "*",
     "@alaskaairux/design-tokens": "^3.15.5",
     "@aurodesignsystem/design-tokens": "^4.10.0",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
