--- a/turbo.json
+++ b/turbo.json
@@ -19,10 +19,10 @@
         "*-css.js"
       ]
     },
-    "@auro-formkit/combobox#build": {
+    "@auro-formkit/auro-combobox#build": {
       "dependsOn": [
-        "@auro-formkit/input#build",
-        "@auro-formkit/dropbox#build"
+        "@auro-formkit/auro-input#build",
+        "@auro-formkit/auro-dropdown#build"
       ]
     },
     "build:version": {
