--- a/components/counter/package.json
+++ b/components/counter/package.json
@@ -1,12 +1,5 @@
 {
-  "//": [
-    "================================================================================",
-    "# To work within the development environment, run the following tasks",
-    "  1. $ npm run dev",
-    "  2. Go to http://localhost:8000",
-    "================================================================================"
-  ],
-  "name": "@aurodesignsystem/auro-counter",
+  "name": "@auro-formkit/auro-counter",
   "version": "3.0.0",
   "description": "auro-counter HTML custom element",
   "repository": {
@@ -14,136 +7,44 @@
     "url": "https://github.com/AlaskaAirlines/auro-counter"
   },
   "type": "module",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "Apache-2.0",
-  "engines": {
-    "node": "^18 || ^20"
-  },
   "dependencies": {
-    "@aurodesignsystem/auro-icon": "^6.0.3",
-    "@aurodesignsystem/auro-library": "^3.0.2",
-    "@popperjs/core": "^2.11.8",
     "chalk": "^5.2.0",
-    "lit": "^3.2.0"
+    "lit": "^3.2.1"
   },
   "peerDependencies": {
     "@aurodesignsystem/design-tokens": "^4.9.2",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2"
   },
   "devDependencies": {
+    "@auro-formkit/build-tools": "*",
+    "@auro-formkit/config": "*",
+    "@auro-formkit/typescript": "*",
     "@aurodesignsystem/design-tokens": "^4.9.2",
-    "@aurodesignsystem/eslint-config": "^1.3.2",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@open-wc/testing": "^4.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^12.0.1",
-    "@web/dev-server": "^0.4.6",
-    "@web/test-runner": "^0.19.0",
-    "autoprefixer": "^10.4.20",
-    "compression": "^1.7.4",
-    "concat": "^1.0.3",
-    "concurrently": "^9.0.1",
-    "copyfiles": "^2.4.1",
-    "core-js": "^3.38.1",
-    "eslint": "^9.11.1",
-    "eslint-plugin-jsdoc": "^50.2.4",
-    "husky": "^9.1.6",
-    "lodash": "^4.17.21",
-    "markdown-magic": "^2.6.1",
-    "nodemon": "^3.1.7",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.47",
-    "postcss-discard-comments": "^7.0.3",
     "postcss-selector-replace": "^1.0.2",
     "rollup": "^4.22.4",
     "rollup-plugin-serve": "^2.0.2",
-    "semantic-release": "^24.1.1",
-    "stylelint": "^16.9.0",
-    "stylelint-config-idiomatic-order": "^10.0.0",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.7.0",
-    "typescript": "^5.5.4",
     "wc-sass-render": "^1.4.0",
-    "web-component-analyzer": "^2.0.0",
-    "whatwg-fetch": "^3.6.20",
-    "yaml-lint": "^1.7.0"
+    "web-component-analyzer": "^2.0.0"
   },
-  "browserslist": [
-    "last 2 Chrome versions",
-    "last 2 iOS major versions",
-    "last 2 Firefox versions",
-    "last 2 Edge versions",
-    "last 2 Safari major versions"
-  ],
-  "nodemonConfig": {
-    "ignore": [
-      "*-css.js",
-      "*.css"
-    ]
-  },
-  "release": {
-    "branches": [
-      {
-        "name": "main"
-      },
-      {
-        "name": "beta",
-        "prerelease": true
-      }
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      [
-        "@semantic-release/changelog",
-        {
-          "changelogFile": "./CHANGELOG.md",
-          "changelogTitle": "# Semantic Release Automated Changelog"
-        }
-      ],
-      "@semantic-release/npm",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "./package.json",
-            "./CHANGELOG.md",
-            "./README.md",
-            "./docs/api.md",
-            "./demo/index.md",
-            "./demo/api.md"
-          ]
-        }
-      ],
-      "@semantic-release/github"
-    ]
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "keywords": [
-    "alaska airlines",
-    "auro",
-    "design system",
-    "web components"
-  ],
- "scripts": {
-    "demo:copy:demo": "copyfiles -u 1 -V './demo/index.md' ./build/demo",
-    "demo:copy:index": "copyfiles -u 1 -V './demo/index.html' ./build",
-    "demo:new:build": "mkdir ./build && mkdir ./build/css && mkdir ./build/demo",
-    "demo:rm:build": "rm -rf ./build",
-    "dev": "concurrently --kill-others 'npm run build:watch' 'npm run serve'",
-    "dist:js": "copyfiles -u 1 -V './src/**/*.js' ./dist",
-    "postCss:component": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
-    "postinstall": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postinstall.mjs",
-    "sass:render": "sass-render --load-path=node_modules 'src/**/*.css' 'components/**/*.css' -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
+  "scripts": {
+    "build": "run-s build:sass bundler types",
+    "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
+    "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
+    "bundler": "rollup -c node:@auro-formkit/config/rollup --input src/index.js",
+    "clean": "rm -rf dist build",
+    "dev": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
+    "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
-    "types": "tsc"
+    "types": "tsc --project tsconfig.json",
+    "lint": "npm-run-all scssLint esLint",
+    "scssLint": "stylelint \"./src/**/*.scss\"",
+    "esLint": "eslint \"./src/**/*.js\""
   }
 }
