feat: add `docProcessor` to generate docs for each components

--- a/components/checkbox/package.json
+++ b/components/checkbox/package.json
@@ -48,9 +48,10 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-s build:sass bundler types",
+    "build": "run-s build:sass bundler build:docs types",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
+    "build:docs": "node ../../packages/build-tools/src/docProcessor.mjs --component checkbox",
     "bundler": "rollup -c node:@auro-formkit/config/rollup",
     "clean": "rm -rf dist build",
     "dev": "web-dev-server",
