--- a/components/select/package.json
+++ b/components/select/package.json
@@ -49,11 +49,12 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-s build:version build:sass bundler types",
+    "build": "run-s build:version build:sass bundler build:docs types",
     "build:version": "node ./src/scripts/version.mjs",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "bundler": "rollup -c node:@auro-formkit/config/rollup",
+    "build:docs": "node ../../packages/build-tools/src/docProcessor.mjs --component select",
     "clean": "rm -rf dist build",
     "dev": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
