feat: add wca as part of build:docs

--- a/components/combobox/package.json
+++ b/components/combobox/package.json
@@ -12,13 +12,13 @@
     "url": "https://github.com/AlaskaAirlines/auro-combobox"
   },
   "dependencies": {
-  "@alaskaairux/icons": "^4.44.1",
-  "@auro-formkit/auro-dropdown": "*",
-  "@auro-formkit/auro-input": "*",
-  "@auro-formkit/auro-menu": "*",
-  "@aurodesignsystem/auro-formvalidation": "^1.0.4",
-  "chalk": "^5.3.0",
-  "lit": "^3.2.1"
+    "@alaskaairux/icons": "^4.44.1",
+    "@auro-formkit/auro-dropdown": "*",
+    "@auro-formkit/auro-input": "*",
+    "@auro-formkit/auro-menu": "*",
+    "@aurodesignsystem/auro-formvalidation": "^1.0.4",
+    "chalk": "^5.3.0",
+    "lit": "^3.2.1"
   },
   "peerDependencies": {
     "@aurodesignsystem/design-tokens": "^4.9.2",
@@ -50,8 +50,8 @@
     "build:version": "node ./src/scripts/version.mjs",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
-    "build:docs": "node ../../packages/build-tools/src/docProcessor.mjs --component combobox",
     "bundler": "rollup -c node:@auro-formkit/config/rollup",
+    "build:docs": "wca analyze 'scripts/wca/*.js' --outFiles docs/api.md; node ../../packages/build-tools/src/docProcessor.mjs --component combobox",
     "clean": "rm -rf dist build",
     "dev": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
