--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@alaskaairux/icons": "^4.44.1",
-    "@aurodesignsystem/auro-formvalidation": "^1.0.4",
-    "@aurodesignsystem/auro-popover": "^4.1.0",
     "@auro-formkit/auro-dropdown": "*",
     "@auro-formkit/auro-input": "*",
+    "@aurodesignsystem/auro-formvalidation": "^1.0.4",
+    "@aurodesignsystem/auro-popover": "^4.1.0",
     "@material/mwc-icon-button": "^0.27.0",
     "@material/mwc-list": "^0.27.0",
     "@material/mwc-menu": "^0.27.0",
@@ -62,8 +62,8 @@
     "build:version": "node ./src/scripts/version.mjs",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
-    "build:docs": "node ../../packages/build-tools/src/docProcessor.mjs --component datepicker",
     "bundler": "rollup -c node:@auro-formkit/config/rollup",
+    "build:docs": "wca analyze 'scripts/wca/*.js' --outFiles docs/api.md; node ../../packages/build-tools/src/docProcessor.mjs --component datepicker",
     "clean": "rm -rf dist build",
     "dev": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
