--- a/components/checkbox/package.json
+++ b/components/checkbox/package.json
@@ -51,8 +51,8 @@
     "build": "run-s build:sass bundler build:docs types",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
-    "build:docs": "node ../../packages/build-tools/src/docProcessor.mjs --component checkbox",
     "bundler": "rollup -c node:@auro-formkit/config/rollup",
+    "build:docs": "wca analyze 'scripts/wca/*.js' --outFiles docs/api.md; node ../../packages/build-tools/src/docProcessor.mjs --component checkbox",
     "clean": "rm -rf dist build",
     "dev": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
