--- a/components/input/package.json
+++ b/components/input/package.json
@@ -59,7 +59,7 @@
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "bundler": "rollup -c node:@auro-formkit/config/rollup",
-    "build:docs": "node ../../packages/build-tools/src/docProcessor.mjs --component input",
+    "build:docs": "wca analyze 'scripts/wca/*.js' --outFiles docs/api.md; wca 'scripts/wca/*' --outFiles docs/api.md; node ../../packages/build-tools/src/docProcessor.mjs --component input",
     "clean": "rm -rf dist build",
     "dev": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
