--- a/components/select/package.json
+++ b/components/select/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@aurodesignsystem/auro-formvalidation": "^1.0.4",
-    "@aurodesignsystem/auro-menu": "^4.1.5",
     "@auro-formkit/auro-dropdown": "*",
+    "@auro-formkit/auro-menu": "*",
     "chalk": "^5.3.0",
     "lit-element": "^4.1.1",
     "lit-html": "^3.2.1"
