refactor: refactor and add component registration #54

--- a/components/counter/package.json
+++ b/components/counter/package.json
@@ -36,7 +36,7 @@
     "build": "run-s build:sass bundler types",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
-    "bundler": "rollup -c node:@auro-formkit/config/rollup --input src/index.js",
+    "bundler": "rollup -c node:@auro-formkit/config/rollup",
     "clean": "rm -rf dist build",
     "dev": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
