ci: export docProcessor in build-tools

--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -8,6 +8,7 @@
   "types": "tsc",
   "exports": {
     ".": "./src/index.js",
-    "./formVersionWriter": "./src/formVersionWriter.mjs"
+    "./formVersionWriter": "./src/formVersionWriter.mjs",
+    "./docProcessor": "./src/docProcessor.mjs"
   }
 }
