--- a/components/checkbox/package.json
+++ b/components/checkbox/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@alaskaairux/icons": "^4.44.1",
-    "@aurodesignsystem/auro-formvalidation": "^1.0.4",
     "chalk": "^5.3.0",
     "lit": "^3.2.1"
   },
@@ -24,6 +23,7 @@
   "devDependencies": {
     "@auro-formkit/build-tools": "*",
     "@auro-formkit/config": "*",
+    "@auro-formkit/form-validation": "*",
     "@auro-formkit/typescript": "*",
     "@aurodesignsystem/design-tokens": "^4.10.0",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
