--- a/components/radio/package.json
+++ b/components/radio/package.json
@@ -12,7 +12,6 @@
     "url": "https://github.com/AlaskaAirlines/auro-radio"
   },
   "dependencies": {
-    "@aurodesignsystem/auro-formvalidation": "^1.0.4",
     "chalk": "^5.3.0",
     "focus-visible": "^5.2.1",
     "lit": "^3.2.1"
@@ -24,6 +23,7 @@
   "devDependencies": {
     "@auro-formkit/build-tools": "*",
     "@auro-formkit/config": "*",
+    "@auro-formkit/form-validation": "*",
     "@auro-formkit/typescript": "*",
     "@alaskaairux/design-tokens": "^3.15.5",
     "@aurodesignsystem/design-tokens": "^4.10.0",
