--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "postinstall": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postinstall.mjs",
     "build:docs": "turbo run build:docs",
+    "build:docs:kit": "turbo run --filter=@auro-formkit/build-tools build:docs:kit",
     "sweep": "find ./components ./packages -type d -name 'dist' -exec rm -rf {} + && find ./components ./packages -not -path '*/node_modules/*' -type f \\( -name '*.css' -o -name '*-css.js' \\) -delete",
     "preCommit": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/pre-commit.mjs",
     "prepare": "husky install"
