fix: updating kitDocProcessor

--- a/turbo.json
+++ b/turbo.json
@@ -45,6 +45,9 @@
     "build:docs": {
       "outputs": ["README.md", "demo/index.*", "docs/partials/*.md"]
     },
+    "build:docs:kit": {
+      "outputs": ["README.md"]
+    },
     "build:version": {
       "outputs": ["src/*.js", "src/**/*.js"]
     },
