--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -89,7 +89,7 @@ branches:
 
 # Labels: define labels for Issues and Pull Requests
 labels:
-  - name: auro-form
+  - name: auro-formkit
     color: 'fa23e4'
     description:
     process: Key filter for this repo
