--- a/.github/workflows/testPublish.yml
+++ b/.github/workflows/testPublish.yml
@@ -29,7 +29,7 @@ jobs:
 
   release:
     # Only release on push to main
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || 'refs/heads/beta'
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/beta')
     runs-on: ubuntu-latest
     needs: test
     steps:
