--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -2,11 +2,14 @@ repository:
   # See https://docs.github.com/en/free-pro-team@latest/rest/reference/repos#edit for all available settings.
   # See https://github.com/apps/settings for app settings
 
+  # A short description of the repository that will show up on GitHub
+  description: Custom element that ....
+
   # A URL with more information about the repository
-  homepage: https://auro.alaskaair.com/components/auro/formkit
+  homepage: https://auro.alaskaair.com/components/auro/form
 
   # A comma-separated list of topics to set on the repository
-  topics: auro, design-system, custom-element
+  topics: auro, design-system, custom-element, generator-v4-6-0
 
   # Either `true` to enable issues for this repository, `false` to disable them.
   has_issues: true
@@ -64,13 +67,13 @@ branches:
         # Required. Require status checks to pass before merging. Set to null to disable
         # Specify which users and teams can dismiss pull request reviews. Pass an empty dismissal_restrictions object to disable. User and team dismissal_restrictions are only available for organization-owned repositories. Omit this parameter for personal repositories.
         dismissal_restrictions:
-          users: ["blackfalcon"]
+          users: ["jason-capsule42"]
       # Required. Require status checks to pass before merging. Set to null to disable
       required_status_checks:
         # Required. Require branches to be up to date before merging.
         strict: true
         # Required. The list of status checks to require in order to merge into this branch
-        contexts: ["test (20.x)", "test (22.x)", "license/cla"]
+        contexts: ["test (20.x)","test (22.x)", "license/cla"]
       # Required. Enforce all configured restrictions for administrators. Set to true to enforce required status checks for repository administrators. Set to null to disable.
       enforce_admins: false
       # Required. Restrict who can push to this branch. Team and user restrictions are only available for organization-owned repositories. Set to null to disable.
