perf: add dynamic documentation for monorepo structure #150

--- a/components/form/package.json
+++ b/components/form/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@auro-formkit/auro-form",
+  "name": "@aurodesignsystem/auro-form",
   "version": "1.0.0",
   "description": "auro-form HTML custom element",
   "type": "module",
