--- a/components/input/package.json
+++ b/components/input/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@auro-formkit/auro-input",
+  "name": "@aurodesignsystem/auro-input",
   "version": "4.2.0",
   "description": "auro-input HTML custom element",
   "type": "module",
