--- a/components/menu/package.json
+++ b/components/menu/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@auro-formkit/auro-menu",
+  "name": "@aurodesignsystem/auro-menu",
   "version": "4.1.4",
   "description": "auro-menu HTML custom element",
   "type": "module",
