--- a/components/radio/package.json
+++ b/components/radio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@auro-formkit/auro-radio",
+  "name": "@aurodesignsystem/auro-radio",
   "version": "4.1.1",
   "description": "auro-radio HTML custom element",
   "type": "module",
