feat: implement a very basic MVP form element
Not feature complete, but ready to start implementing real work.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "access": "public"
   },
   "workspaces": [
-    "components/*",
+    "components/input",
+    "components/form",
     "packages/*"
   ],
   "scripts": {
