feat: implement initial event listeners
This listens to, and attaches event listeners for, the following:

- input
- auroFormElement-validated
- button[type=submit] clicks

It also adds a datepicker to the example form.

--- a/components/form/package.json
+++ b/components/form/package.json
@@ -26,6 +26,8 @@
     "@auro-formkit/build-tools": "*",
     "@auro-formkit/config": "*",
     "@auro-formkit/typescript": "*",
+    "@auro-formkit/auro-datepicker": "*",
+    "@auro-formkit/auro-input": "*",
     "@aurodesignsystem/design-tokens": "^4.12.1",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
     "@rollup/plugin-node-resolve": "^15.3.0",
