test: update turbo.json to accept test:watch with Turbo flags

--- a/turbo.json
+++ b/turbo.json
@@ -19,6 +19,11 @@
         "*-css.js"
       ]
     },
+    "test:watch": {
+      "dependsOn": ["build"],
+      "persistent": true,
+      "cache": false
+    },
     "@aurodesignsystem/auro-combobox#build": {
       "dependsOn": [
         "@aurodesignsystem/auro-input#build",
